# conftool-python

./: .gitignore  CHANGELOG.rst  LICENSE.rst  README.rst  requirements.txt  setup.cfg
ConfToolAPI/: APIHandler.py
conftool/: ConfToolAPI.py  __init__.py
tests/: test_ConfToolAPI.py
