[metadata]
name = conftool
version = 1.0.0
description = Methods to query the ConfTool API 
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = conftool, api
license = MIT License
license_files = file: LICENSE.rst
author = Lukas Lamm
author_email = lukas.lamm@mailbox.org
classifiers =
    Programming Language :: Python :: 3

[options]
packages = conftool
install_requires =
    requests
    xmltodict