[metadata]
name = ConfToolAPI
version = 1.0.0
description = Methods to query the ConfTool API 
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = conftool, api
url = https://github.com/llamm-de/conftool-python
license = MIT License
license_files = file: LICENSE.rst
author = Lukas Lamm
author_email = lukas.lamm@mailbox.org
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ConfToolAPI
install_requires =
    requests
    xmltodict